add ability to exclude seats with a certain status from get seats
