# apispec/api.spec.json
@@ -72,6 +72,9 @@
                 ],
                 "parameters": [
                     {
+                        "$ref": "#/components/parameters/ExcludeStatus"
+                    },
+                    {
                         "$ref": "#/components/parameters/QueryLimit"
                     },
                     {
@@ -258,6 +261,20 @@
     },
     "components": {
         "parameters": {
+            "ExcludeStatus": {
+                "in": "query",
+                "name": "excludeStatus",
+                "required": false,
+                "description": "List of statuses to exclude subscriptions from result set if they have any of these statuses",
+                "schema": {
+                    "type": "array",
+                    "items": {
+                        "type": "string",
+                        "enum": ["Active", "Deprovisioned"],
+                        "default": []
+                    }
+                }
+            },
             "QueryOffset": {
                 "in": "query",
                 "name": "offset",
