# controllers/ams.go
@@ -8,6 +8,7 @@ import (
 	"errors"
 	"fmt"
 	"github.com/RedHatInsights/entitlements-api-go/logger"
+	v1 "github.com/openshift-online/ocm-sdk-go/accountsmgmt/v1"
 	"github.com/sirupsen/logrus"
 	"net/http"
 
@@ -62,15 +63,21 @@ func (s *SeatManagerApi) DeleteSeatsId(w http.ResponseWriter, r *http.Request, i
 		return
 	}
 
-	orgId, err := s.client.GetSubscriptionOrgId(subscription)
+	subOrgId, ok := subscription.GetOrganizationID()
+	if !ok {
+		do500(w, fmt.Errorf("Subscription with id [%s] does not have a corresponding ams org id, cannot verify subscription org", id))
+	}
+
+	amsUserOrgId, err := s.client.ConvertUserOrgId(idObj.Internal.OrgID)
 	if err != nil {
-		do500(w, fmt.Errorf("AMS GetSubscriptionOrgId [%w]", err))
+		do500(w, fmt.Errorf("AMS ConvertUserOrgId [%w]", err))
 		return
 	}
 
-	if orgId != idObj.Internal.OrgID {
+	if subOrgId != amsUserOrgId {
 		doError(w, http.StatusForbidden,
-			fmt.Errorf("Not allowed to delete subscription %s. Subscription org id [%s] must match user org id [%s]}", id, orgId, idObj.Internal.OrgID))
+			fmt.Errorf("Not allowed to delete subscription %s. Subscription org [%s] must match user ams org id [%s]}. User org [%s]",
+				id, subOrgId, amsUserOrgId, idObj.Internal.OrgID))
 		return
 	}
 
@@ -135,25 +142,34 @@ func (s *SeatManagerApi) GetSeats(w http.ResponseWriter, r *http.Request, params
 		return
 	}
 
-	var seats []api.Seat
-	for _, sub := range subs.Slice() {
-		seats = append(seats, api.Seat{
-			AccountUsername: toPtr(sub.Creator().Username()),
-			SubscriptionId:  toPtr(sub.ID()),
-			Status: toPtr(sub.Status()),
-		})
+	var seats = make([]api.Seat, 0)
+	excludeStatus := make(map[string]int)
+	if params.ExcludeStatus != nil {
+		for index, element := range *params.ExcludeStatus { // convert to a map so we only have to iterate once
+			excludeStatus[element] = index
+		}
 	}
+	subs.Each(func(sub *v1.Subscription) bool {
+		if _, exclude := excludeStatus[sub.Status()]; !exclude {
+			seats = append(seats, api.Seat{
+				AccountUsername: toPtr(sub.Creator().Username()),
+				SubscriptionId:  toPtr(sub.ID()),
+				Status:          toPtr(sub.Status()),
+			})
+		}
+		return true
+	})
 
 	// AMS api for subscriptions doesn't return the information needed to calculate last
-	prev_offset := offset - limit
-	if prev_offset < 0 {
-		prev_offset = 0
+	prevOffset := offset - limit
+	if prevOffset < 0 {
+		prevOffset = 0
 	}
 
 	links := &api.PaginationLinks{
 		First:    toPtr(fmt.Sprintf("%s/?limit=%d&offset=0", BASE_LINK_URL, limit)),
 		Next:     toPtr(fmt.Sprintf("%s/?limit=%d&offset=%d", BASE_LINK_URL, limit, offset+limit)),
-		Previous: toPtr(fmt.Sprintf("%s/?limit=%d&offset=%d", BASE_LINK_URL, limit, prev_offset)),
+		Previous: toPtr(fmt.Sprintf("%s/?limit=%d&offset=%d", BASE_LINK_URL, limit, prevOffset)),
 	}
 
 	resp := api.ListSeatsResponsePagination{
